# html-entity-map

./: .travis.yml  CHANGELOG.md  README.md  cabal.project  html-entity-map.cabal
Data/HTML/: Entities.hs
bench/: Main.hs
