cabal-version:   1.18
name:            html-entity-map
version:         0.1.0.0
license:         BSD3
license-file:    LICENSE.md
maintainer:      Mark Karpov <markkarpov92@gmail.com>
author:          Mark Karpov <markkarpov92@gmail.com>
tested-with:     ghc ==8.8.4 ghc ==8.10.4 ghc ==9.0.1
homepage:        https://github.com/mrkkrp/html-entity-map
bug-reports:     https://github.com/mrkkrp/html-entity-map/issues
synopsis:
    Map from HTML5 entity names to the corresponding Unicode text

description:
    Map from HTML5 entity names to the corresponding Unicode text.

category:        HTML
build-type:      Simple
extra-doc-files:
    CHANGELOG.md
    README.md

source-repository head
    type:     git
    location: https://github.com/mrkkrp/html-entity-map.git

flag dev
    description: Turn on development settings.
    default:     False
    manual:      True

library
    exposed-modules:  Data.HTML.Entities
    default-language: Haskell2010
    build-depends:
        base >=4.13 && <5.0,
        text >=0.2 && <1.3,
        unordered-containers >=0.2.5 && <0.3

    if flag(dev)
        ghc-options: -Wall -Werror

    else
        ghc-options: -O2 -Wall

    if flag(dev)
        ghc-options:
            -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns
            -Wnoncanonical-monad-instances

benchmark bench
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   bench
    default-language: Haskell2010
    build-depends:
        base >=4.13 && <5.0,
        criterion >=0.6.2.1 && <1.6,
        html-entity-map -any,
        text >=0.2 && <1.3,
        unordered-containers >=0.2.5 && <0.3

    if flag(dev)
        ghc-options: -O2 -Wall -Werror

    else
        ghc-options: -O2 -Wall
