cabal-version:   2.4
name:            html-entity-map
version:         0.1.0.0
license:         BSD-3-Clause
license-file:    LICENSE.md
maintainer:      Mark Karpov <markkarpov92@gmail.com>
author:          Mark Karpov <markkarpov92@gmail.com>
tested-with:     ghc ==9.0.2 ghc ==9.2.5 ghc ==9.4.4
homepage:        https://github.com/mrkkrp/html-entity-map
bug-reports:     https://github.com/mrkkrp/html-entity-map/issues
synopsis:
    Map from HTML5 entity names to the corresponding Unicode text

description:
    Map from HTML5 entity names to the corresponding Unicode text.

category:        HTML
build-type:      Simple
extra-doc-files:
    CHANGELOG.md
    README.md

source-repository head
    type:     git
    location: https://github.com/mrkkrp/html-entity-map.git

flag dev
    description: Turn on development settings.
    default:     False
    manual:      True

library
    exposed-modules:  Data.HTML.Entities
    default-language: GHC2021
    build-depends:
        base >=4.15 && <5.0,
        text >=0.2 && <2.1,
        unordered-containers >=0.2.5 && <0.3

    if flag(dev)
        ghc-options: -Wall -Werror

    else
        ghc-options: -O2 -Wall

    if flag(dev)
        ghc-options:
            -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns
            -Wnoncanonical-monad-instances

benchmark bench
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   bench
    default-language: GHC2021
    build-depends:
        base >=4.15 && <5.0,
        criterion >=0.6.2.1 && <1.7,
        html-entity-map,
        text >=0.2 && <2.1,
        unordered-containers >=0.2.5 && <0.3

    if flag(dev)
        ghc-options: -O2 -Wall -Werror

    else
        ghc-options: -O2 -Wall
